kubernetes/apps/giftcompass/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: giftcompass
  namespace: giftcompass
spec:
  selector:
    app: giftcompass
  ports:
    - { name: http, port: 80, targetPort: http }
