kubernetes/apps/giftcompass/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giftcompass
  namespace: giftcompass
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts: [giftcompass.lab.skyhaven.ltd]
      secretName: giftcompass-tls
  rules:
    - host: giftcompass.lab.skyhaven.ltd
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: giftcompass
                port:
                  name: http
